2009-05-18  Martin Leidig  <mleidig@schlund.de>

	Added support for deferring image includes until runtime by setting
	the <pfx:image> or <pfx:xinp type="image"> element's 'level' attribute
	to 'runtime'. The 'src', 'themed-path', 'themed-img' and 'alt' values
	can be lately bound using the according <pfx:src>, <pfx:themed-path>,
	<pfx:themed-img> and <pfx:alt> elements, which are evaluated at
	runtime.

2009-05-15  Martin Leidig  <mleidig@schlund.de>

	Added support for inline-javascript compression. Compression can be
	enabled/disabled setting an according param in the global or
	standardpage section:
	<param name="compress-inline-javascript" value="true"/>
	You can use cus:choose/cus:when to enable/disable compression for a
	specific mode.
	By default we'll try to use the YUI compressor if it's availabe in the
	classpath. If you want to explicitly exclude a script section from
	compression you can set the compress attribute to false:
	<pfx:script compress="false">

2009-05-13  Martin Leidig  <mleidig@schlund.de>

	Improved XSLT stylesheet compilation error handling: Remember
	TransformerExceptions and add them as TransformerConfigurationException
	cause to reflect the real problem and not just display the pretty vacant 
	'Failed to compile stylesheet' message.

2009-05-08  Martin Leidig  <mleidig@schlund.de>

	Don't copy through action attributes at input elements. This fixes the
	following problem in Opera: Actions didn't work in Opera because it uses 
	the action attribute from the submit button as form action.

2009-05-07  Martin Leidig  <mleidig@schlund.de>
	
	Improved Live-Jar support: If the groupId and version of a Pustefix
	module can't be derived from the jar file name, we'll try to detect
	them by reading the according MANIFEST entries set by Maven (if
	'addDefaultImplementationEntries' is enabled in the POM).

2009-05-06  Martin Leidig  <mleidig@schlund.de>

	Fixed NPE when unconfigured page is called with action parameter.
